# earl

./: .travis.yml  Cargo.toml  README.md
benches/: parse_url.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
src/: encoding.rs  form_urlencoded.rs  host.rs  lib.rs  origin.rs  parser.rs  path_segments.rs  quirks.rs  serde_support.rs  slicing.rs
tests/: data.rs  unit.rs
url_serde/src/: lib.rs
