[package]
name = "earl"
version = "0.1.0"
authors = ["The rust-url developers", "People who like earl grey"]
edition = "2018"

description = "URL library for Rust, based on the WHATWG URL Standard"
documentation = "https://docs.rs/earl"
repository = "https://github.com/killercup/earl"
readme = "README.md"
keywords = ["url", "parser"]
categories = ["parser-implementations", "web-programming", "encoding"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "killercup/earl" }

[dev-dependencies]
rustc-test = "0.3"
serde_json = "1"
bencher = "0.1"
serde_derive = "1.0.94"

[features]
query_encoding = ["encoding"]
heap_size = ["heapsize"]

[dependencies]
encoding = { version = "0.2", optional = true }
heapsize = { version = "0.4.2", optional = true }
idna = { version = "0.1.0" }
matches = "0.1"
percent-encoding = { version = "1.0.0" }
serde = { version = "1", optional = true}

[[bench]]
name = "parse_url"
harness = false

[package.metadata.docs.rs]
features = ["query_encoding", "serde"]
